src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dwF1000-dhF500-b.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: F1000\ndefault window height: F500\nborder on"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1240 × 680, states: []

post-map configures:
size: 1000 × 500, bounds: 1240 × 680, states: [Activated]
